converstion logic implemented
